-
Bug
-
Resolution: Done
-
P2: Important
-
5.6
-
Windows
-
64d931d5fc5f17b8c4875f6c59f900aa59080881
When having multiple Y-axis in same chart, scrolling the chart for a while ends up breaking the rendering (height jumps up, drawing is broken).
Steps to reproduce:
- Run attached sample (based on DynamicSpline example)
- Keep it running for approximately 10 seconds
- EXPECTED: Chart keeps rendering indefinitely
- ACTUAL: After about 10 seconds, chart rendering goes broken