Fix axis minimum height in case of multiple axes on same orientation

Removed the incorrect multiplicator that doubled the axis minimum
height on vertical axes for each axis on the same orientation.

Task-number: QTBUG-53949
Change-Id: Ie07d358b7274760f74ea87e036b0a980d6996925
Reviewed-by: Mika Salmela <mika.salmela@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>